--- a/Quizzler/View/Base.lproj/Main.storyboard
+++ b/Quizzler/View/Base.lproj/Main.storyboard
@@ -31,11 +31,25 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="1000" text="Question Text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2eV-89-C4D">
-                                        <rect key="frame" x="0.0" y="50.333333333333343" width="361" height="448.66666666666663"/>
+                                        <rect key="frame" x="0.0" y="50.333333333333343" width="361" height="338.66666666666663"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cf0-KN-jQT">
+                                        <rect key="frame" x="0.0" y="419" width="361" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="80" id="APP-JL-G7t"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <state key="normal" title="True" backgroundImage="Rectangle">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="answerButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="704-ir-vgF"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hKT-Ec-Umb">
                                         <rect key="frame" x="0.0" y="529" width="361" height="80"/>
                                         <constraints>
@@ -90,11 +104,12 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="falseButton" destination="gYN-iC-6Ru" id="a58-wE-Nr6"/>
+                        <outlet property="choice1" destination="cf0-KN-jQT" id="0bM-2n-bOy"/>
+                        <outlet property="choice2" destination="hKT-Ec-Umb" id="yxK-av-S2T"/>
+                        <outlet property="choice3" destination="gYN-iC-6Ru" id="8aC-HI-KHo"/>
                         <outlet property="progressBar" destination="dtD-z3-FXV" id="EhB-ln-Bc2"/>
                         <outlet property="questionLabel" destination="2eV-89-C4D" id="JDy-tU-Aqq"/>
                         <outlet property="scoreLabel" destination="11d-xh-Sfz" id="INs-j9-Xel"/>
-                        <outlet property="trueButton" destination="hKT-Ec-Umb" id="eLm-Yn-ZX1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
